crates/derive/tests/reactive/fail/09-use-reserved-ident.rs
use sorrow_derive::Reactive;

#[derive(Reactive)]
struct OuterTest {
    __runtime: i32,
}

fn main() {}
