crates/derive/tests/reactive/fail/09-use-reserved-ident.stderr
error: derive(Reactive) uses this identifier internally, please use another one.
 --> tests/reactive/fail/09-use-reserved-ident.rs:5:5
  |
5 |     __runtime: i32,
  |     ^^^^^^^^^
